# dimatech

./: .env  .env.dev  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
src/: main.py
src/api/: admin.py  auth.py  dependencies.py  users.py  webhooks.py
src/config/: config.py  utils.py
src/db/: db.py
src/migrations/: env.py
src/migrations/versions/: 6e863341ecac_.py  b9d560793edf_.py
src/models/: users.py
src/repositories/: admins.py  auth.py  users.py  webhooks.py
src/schemas/: admins.py  auth.py  users.py  webhooks.py
src/services/: admins.py  auth.py  users.py  webhoosk.py
tests/: test_data.py
tests/test_api/: test_admins.py  test_auth.py  test_users.py
